Filter javacopts to only include ones that are relevant for turbine
This avoids passing long javac option lists to turbine when it only looks at a handful of flags, making command lines (and cache keys) for turbine a bit smaller.

This does require some ad-hoc parsing of javac command lines that needs to be kept in sync with turbine, but the javac flag syntax that is relevant to turbine is relatively simple and unlikely to change frequently.

PiperOrigin-RevId: 936051508
Change-Id: I9c9421c91261a49bd8d7c64baaff0ca5a17bfde9